Minor corrections to the dev page