@@ -6,11 +6,17 @@ title: Development
 
 {% include links.md %}
 
-# Development
+## Support
+
+Support and general discussion lists about Diffa are accessible [here][support]. 
+
+## Development
 
 This is general information for those wanting to follow the development of Diffa.
 
 ## Roadmap
+
+The roadmap is still quite vague at the moment but there is a vague interest in the following features:
 
 * Authentication
 * Configuration
@@ -27,7 +33,16 @@ Please search the issue tracker before submitting a bug. The issue tracker is av
 
 ### Building
 
+If you'd like to build Diffa from source there is README in the top level of the source tree that gives a basic outline of how to do this. Diffa is built using Maven using these steps: 
+
+	$ git clone git://github.com/lshift/diffa.git
+	$ cd diffa
+	$ export MAVEN_OPTS=-XX:MaxPermSize=512m
 	$ mvn install
+
+After this has completed you can boot the agent using the Maven Jetty plugin:
+
 	$ cd agent
 	$ mvn jetty:run
 
+Then the UI of agent should be available on http://localhost:19093/diffa-agent/
